# agent-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  policy.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_guard/: __init__.py  audit.py  bundled.py  cli.py  decision.py  guard.py  judge.py  mcp.py  policy.py  registry.py  tiers.py
docs/: DESIGN-runtime-identity-binding.md
examples/: demo.py  end_to_end.py
examples/mcp/: README.md  echo_server.py  policy.yaml
identity/: __init__.py  attestation.py  broker.py  remote.py  runtime.py  token.py
tests/: test_audit_sinks.py  test_bundled.py  test_cli.py  test_container_smoke.py  test_default_rules_and_callable_sink.py  test_guard.py  test_identity.py  test_judge_and_remote.py  test_mcp_and_decorator.py  test_registry.py
