[project]
name = "agent-guard"
version = "0.0.1"
description = "Least-privilege authorization + audit for AI agent tool calls. Harness-agnostic."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
guard = "agent_guard.cli:main"

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
dev = ["pytest>=8", "pyyaml>=6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_guard", "identity"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
