[project]
name = "agent-guard"
version = "0.0.1"
description = "Least-privilege authorization, per-agent identity, and audit for AI agent tool calls. Harness-agnostic, local-first, fail-closed."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "voltagebots" }]
keywords = ["ai", "agents", "mcp", "authorization", "guardrails", "security", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/voltagebots/agent-guard"
Repository = "https://github.com/voltagebots/agent-guard"
Issues = "https://github.com/voltagebots/agent-guard/issues"

[project.scripts]
guard = "agent_guard.cli:main"

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
dev = ["pytest>=8", "pyyaml>=6", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_guard", "identity"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
